--- a/package.json
+++ b/package.json
@@ -57,7 +57,13 @@
   "devDependencies": {
     "eslint": "^8.57.1",
     "nodemon": "^3.1.10",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "typescript": "^5.4.0"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "$typescript"
+    }
   },
   "eslintConfig": {
     "extends": [
