--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,12 @@
     "npm": "11.x"
   },
   "devDependencies": {
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "typescript": "^5.4.0"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "$typescript"
+    }
   }
 }
