feat: comprehensive updates - responsive design, new features, UI improvements
- Added comprehensive responsive design for all pages (mobile, tablet, desktop)
- Implemented Quiz system with QuizPlayer and Quizzes pages
- Added Problems and Profile pages
- Enhanced landing page with Features section and glowing code visualizer
- Updated logo and branding (CodeConnect with icon)
- Implemented private rooms with password protection
- Added Firebase integration
- Enhanced error handling and suppression
- Improved Navbar, Editor, and all components for mobile
- Added RoomChoiceModal for better UX
- Updated styling with glassmorphism and modern aesthetics
- Fixed various bugs and improved performance

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.22",
     "mysql2": "^3.16.0",
     "pg": "^8.13.1",
