--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
+    "firebase-admin": "^13.6.0",
     "mongoose": "^8.18.2",
     "socket.io": "^4.8.1"
   },
