--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^11.0.2",
     "framer-motion": "^12.24.12",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
