--- a/backend_django/requirements.txt
+++ b/backend_django/requirements.txt
@@ -9,3 +9,7 @@ asgiref
 djangorestframework-simplejwt
 google-generativeai
 requests
+dj-database-url
+psycopg2-binary
+pymongo==4.6.0
+dnspython==2.4.2
