feat: Major v3.0 update - AI tools, 3D UI, Firebase integration, responsive design
- Add AI-powered Code Generator, Debugger, and Test Runner
- Implement 3D landing page with React Three Fiber
- Add comprehensive Problem Library (20+ challenges)
- Make all pages fully responsive (mobile-optimized)
- Complete Firebase migration for real-time collaboration
- Add ProblemPanel with conditional display
- Update README with all new features
- Create .env.example templates for easy setup
- Archive legacy code to archive_legacy_root/

All integrations use environment variables - no hardcoded secrets.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,23 +1,12 @@
-# Environment Variables Template
-# Copy this to .env.development or .env.production and fill in your values
+# Firebase Configuration (Frontend)
+# Copy this file to frontend/.env.local and fill in your Firebase project details
+REACT_APP_FIREBASE_API_KEY=your_firebase_api_key_here
+REACT_APP_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=your_project_id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+REACT_APP_FIREBASE_APP_ID=your_app_id
+REACT_APP_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
-# Backend API URL
-# Development: http://localhost:8000 (Django) or http://localhost:3001 (Node.js)
-# Production: Your deployed backend URL
-REACT_APP_BACKEND_URL=http://localhost:8000
-
-# WebSocket/Socket.IO URL (Node.js backend)
-# Development: http://localhost:3001
-# Production: Your deployed Socket.IO server URL
-REACT_APP_SOCKET_URL=http://localhost:3001
-
-# Firebase Configuration
-# Currently hardcoded in src/firebase.js
-# If you need environment-based Firebase config, add these:
-# REACT_APP_FIREBASE_API_KEY=
-# REACT_APP_FIREBASE_AUTH_DOMAIN=
-# REACT_APP_FIREBASE_PROJECT_ID=
-# REACT_APP_FIREBASE_STORAGE_BUCKET=
-# REACT_APP_FIREBASE_MESSAGING_SENDER_ID=
-# REACT_APP_FIREBASE_APP_ID=
-# REACT_APP_FIREBASE_MEASUREMENT_ID=
+# Backend API URL (Frontend)
+REACT_APP_BACKEND_URL=http://localhost:3001
