--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,11 @@
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/codeconnect?retryWrites=true&w=majority
-PORT=5000
+# Backend Configuration
+# Copy this file to backend/.env and fill in your API keys
+
+# Google Gemini AI API Key
+GOOGLE_API_KEY=your_google_gemini_api_key_here
+
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3000
+
+# Server Port
+PORT=3001
