--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,24 +4,33 @@
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^8.18.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
     "firebase": "^11.0.2",
     "framer-motion": "^12.24.12",
+    "gsap": "^3.14.2",
     "jwt-decode": "^4.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^7.1.2",
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.3",
+    "three": "^0.182.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "set PORT=3000 && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
     "eject": "react-scripts eject"
   },
@@ -48,6 +57,7 @@
     "npm": "11.x"
   },
   "devDependencies": {
+    "react-app-rewired": "^2.2.1",
     "react-icons": "^5.5.0",
     "typescript": "^5.4.0"
   },
