--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
     "firebase-admin": "^13.6.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.18.2",
     "socket.io": "^4.8.1"
   },
