Improve MongoDB connection timeout handling and update env example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,13 @@
 # Backend Configuration
 # Copy this file to backend/.env and fill in your API keys
 
-# Google Gemini AI API Key
+# MongoDB Connection (Required for Auth)
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/codeconnect
+
+# JWT Secret (Required for Auth)
+JWT_SECRET=your_jwt_secret_key_here
+
+# Google Gemini AI API Key (Required for AI Chat)
 GOOGLE_API_KEY=your_google_gemini_api_key_here
 
 # Frontend URL (for CORS)
