--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,7 +1,12 @@
 {
-  "extends": ["react-app", "react-app/jest"],
+  "extends": [
+    "react-app",
+    "react-app/jest"
+  ],
   "rules": {
-    "no-unused-vars": "warn",
-    "no-console": "off"
+    "no-unused-vars": "off",
+    "no-console": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
