--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.24.12",
     "gsap": "^3.14.2",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
